# Wavematic

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  wordlist.txt
docs/source/: modules.rst  wavematic.rst
tests/data/: __init__.py  data.json
tests/test_wavematic/: test_noise.py  test_timeaxis.py
wavematic/: __init__.py  wave.py
