[metadata]
name = wavematic
version = attr: wavematic.__version__
author = Micael Jarniac
author_email = micael@jarniac.dev
description = Simple wave generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MicaelJarniac/Wavematic
project_urls =
    Bug Tracker = https://github.com/MicaelJarniac/Wavematic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas >= 1.1.5
    numpy >= 1.19.5
    noise >= 1.2.2
    scipy >= 1.4.1

[flake8]
max-line-length = 88
max-complexity = 18
ignore = E203, E266, E501, W503, F403, F401

[isort]
profile = black

[semantic_release]
changelog_capitalize = false
version_variable = wavematic/__init__.py:__version__
build_command = python setup.py sdist
branch = main

[coverage:run]
omit = venv/*, tests/*
command_line = -m pytest

[tool:pytest]
# addopts = --cov
